# crypto_research

./: .gitignore  Cargo.toml  README.md  TakeawaysECC.md  exponentiation.md  rustfmt.toml
ecc/: Cargo.toml  README.md
ecc/src/: ark_ff_test.rs  bn254.rs  bn256.rs  error.rs  group.rs  grumpkin.rs  keccak.rs  lib.rs  utils.rs
ecc/src/elliptic_curve_arithmetic/: mod.rs  montgomery_curve.rs  script.sage  weierstrass_curve.rs
ecc/src/elliptic_curve_arithmetic/conceptural/: montgomery_curve.rs  weierstrass_curve.rs
ecc/src/elliptic_curve_arithmetic/cycle_friendly/pallas/: curve.rs
ecc/src/elliptic_curve_arithmetic/models/: mod.rs  short_weierstrass_model.rs  weierstrass_model.rs
ecc/src/elliptic_curve_arithmetic/pairing_friendly/: mod.rs
ecc/src/elliptic_curve_arithmetic/pairing_friendly/bls12/: g1.rs  g12.rs  g1_g2_conf.sage  g2.rs  gt.rs  mod.rs
ecc/src/elliptic_curve_arithmetic/weierstrass_model/: mod.rs
ecc/src/elliptic_curve_arithmetic/weierstrass_model/pallas/: curve.rs  curve.sage
ecc/src/finite_field_arithmetic/: basic_ops.rs  bigint.rs  bigint16.rs  bigint64.rs  field.rs  field_mont_friendly.rs  gcd.rs  gcd16.rs  gcd64.rs  mod.rs
ecc/src/finite_field_arithmetic/bls12/: README.md  fq.rs  mod.rs  quadratic_extension.rs
ecc/src/finite_field_arithmetic/bn/: README.md
ecc/src/finite_field_arithmetic/conceptural/: bigint64.rs  field.rs  field_mont_friendly.rs  gcd64.rs  mod.rs  random.rs
ecc/src/finite_field_arithmetic/cycle_friendly/: mod.rs
ecc/src/finite_field_arithmetic/cycle_friendly/pallas/: fq.rs  fq.sage  fr.sage
ecc/src/finite_field_arithmetic/cycle_friendly/vasta/: mod.rs
ecc/src/finite_field_arithmetic/kss/: README.md
ecc/src/finite_field_arithmetic/pairing_friendly/: cubic_extension.rs  cyclotomic.rs  field.rs  mod.rs  quadratic_extension.rs
ecc/src/finite_field_arithmetic/pairing_friendly/bls12/: fq.rs  fq12.rs  fq2.rs  fq2.sage  fq6.rs  fq6.sage  (+4 more)
ecc/src/finite_field_arithmetic/pallas/: benchmark.sage  fq.rs  fr.rs  fr.sage  mod.rs
ecc/src/finite_field_arithmetic/traits/: mod.rs  pairing_field.rs  weierstrass_field.rs
ecc/src/integer_arithmetic/: addition.rs  division.rs  division.rs.bak  gcd.rs  inversion.rs  mod.rs  multiplication.rs  squre_root.rs  substraction.rs
ecc/src/pairings/: AtePairing.sage  GroupDefinition.sage  TatePairing.sage  WeilPairing.sage  mod.rs  tate.rs  weil.rs
pcs/: Cargo.toml  README.md
pcs/src/: lib.rs
pcs/src/ipa/: ipa_over_pallas.rs  mod.rs
pcs/src/pb/: mod.rs
pcs/src/polynomial/: dense.rs  mod.rs  sparse.rs
(+43 files in other folders)
