[package]
name = "pcs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ecc = {path = "../ecc"}
hash = {path = "../hash"}
rand = {version = "0.8.5", feature = "std"}

[features]
default = []
std = ["rand/std"]